add min-height inside banner

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!-- font awesome links -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- style links  -->
-     <link rel="stylesheet" href="./style.css">
+     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="responsiveSmallDevice.css">
     <title>TechWave</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
             <img src="./images/TechWave.png" alt="">
         </div>
         <!-- navbar -->
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href="">About</a></li>
                 <li><a href="">Episodes</a></li>
@@ -27,6 +28,9 @@
         <!-- button  -->
         <div class="btn-container">
             <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button>    
+        </div>
+        <div class="menubar">
+
         </div>
      </header>
      <main>
