navbar and banner responsive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <div class="btn-container">
             <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button>    
         </div>
+        <!-- menubar  -->
         <div class="menubar">
+            <i class="fa-solid fa-bars"></i>
 
         </div>
      </header>
