--- a/index.html
+++ b/index.html
@@ -58,6 +58,41 @@
             </div>
 
          </section>
+         <!-- about section  -->
+          <section id="about-container">
+            <!-- description  -->
+            <div class="about-des">
+                <h1>About the Podcast</h1>
+                <div class="peragraph">
+                    <p id="pera-1">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+We break down complex topics into digestible insights, explore productivity strategies that actually work,
+and share stories of personal growth from industry leaders.</p>
+
+<p id="pera-2">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                </div>
+
+            </div>
+            <div class="about-cards">
+                <div class="cards">
+                    <h1>150K+</h1>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="cards">
+                    <h1>200+</h1>
+                    <p>Episodes Published</p>
+                </div>
+                <div class="cards">
+                    <h1>4.9★</h1>
+                    <p>Average Rating</p>
+                </div>
+                <div class="cards">
+                    <h1>50+</h1>
+                    <p>Industry Experts</p>
+                </div>
+
+
+            </div>
+          </section>
      </main>
 </body>
 </html>
