add grid section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,39 @@ and share stories of personal growth from industry leaders.</p>
 
             </div>
           </section>
+          <!-- why choose us section  -->
+           <section class="choose-container">
+            <div id="grid-title">
+                <h1>Why Choose TechWave</h1>
+            </div>
+            <div class="grid-container">
+                <div class="box1">
+                    <img src="./images/headphone.png" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="box2">
+                     <img src="./images/device.png" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="box3">
+                     <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="box4">
+                     <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="box5">
+                     <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </div>
+           </section>
      </main>
 </body>
 </html>
