working on responsive

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@ and share stories of personal growth from industry leaders.</p>
 
             </div>
             <div class="about-cards">
-                <div class="cards">
+                <div class="cards card1">
                     <h1>150K+</h1>
                     <p>Monthly Listeners</p>
                 </div>
-                <div class="cards">
+                <div class="cards card2">
                     <h1>200+</h1>
                     <p>Episodes Published</p>
                 </div>
-                <div class="cards">
+                <div class="cards card3">
                     <h1>4.9★</h1>
                     <p>Average Rating</p>
                 </div>
-                <div class="cards">
+                <div class="cards card4">
                     <h1>50+</h1>
                     <p>Industry Experts</p>
                 </div>
