--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <div class="micro-img">
                 <img src="./images/microphone.png" alt="">
             </div>
+            <div class="new">
+                <p>New</p>
+            </div>
             <div class="banner-des">
                 <h1>TechWave</h1>
                 <p>Your daily dose of tech insights,productivity hacks ,and personal growth</p>
